--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-plotly
-pycaret
-scikit-learn
+streamlit==1.45.1
+pandas==2.3.0
+pycaret==3.3.2
+plotly==6.1.2
+scikit-learn==1.7.0
 
