--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas               
-pycaret
-plotly
-scikit-learn
+streamlit>=1.45.1
+pandas>=2.3.0  
+pycaret>=3.3.2
+plotly>=6.1.2
+scikit-learn>=1.7.0
+numpy>=1.23,<3
