--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit>=1.45.1
-pandas>=2.3.0  
-pycaret>=3.3.2
-plotly>=6.1.2
-scikit-learn>=1.7.0
-numpy>=1.23,<3
+numpy>=1.23,<2.0.0
+pandas>=1.5.0,<2.0.0
+scikit-learn>=1.0.0,<2.0.0
+pycaret==3.3.2
+streamlit>=1.22.0
+plotly>=5.0.0
